[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scenes/Player Bar.gd" type="Script" id=1]
[ext_resource path="res://assets/images/pl ayyyy button.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/HSlider.gd" type="Script" id=3]
[ext_resource path="res://assets/images/pawsbutton yea.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Consola.tres" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 28
border_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.439216, 0.905882, 0.972549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.807843, 0.807843, 0.807843, 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 5 )

[node name="Player Bar" type="Control" groups=["Song Time Recievers"]]
anchor_right = 1.0
anchor_bottom = 0.133
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
play_icon = ExtResource( 2 )
pause_icon = ExtResource( 4 )
song_time_label = NodePath("Label yeah/Song Time Box")
song_length_label = NodePath("Label yeah/Song Length Label")

[node name="Player Button" type="Control" parent="."]
anchor_top = 0.418
anchor_right = 0.078
anchor_bottom = 1.0
margin_top = -15.1453
margin_bottom = -15.1453
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Player Button"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Player Button/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Player Head" type="Control" parent="."]
anchor_left = 0.079
anchor_right = 1.0
anchor_bottom = 0.725
margin_top = 14.2544
margin_bottom = 14.2544
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Player Head" groups=["Song Time Recievers"]]
anchor_right = 0.987
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
step = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label yeah" type="HBoxContainer" parent="."]
anchor_left = 0.0809082
anchor_top = 0.177852
anchor_right = 0.2632
anchor_bottom = 0.456326
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Song Time Box" type="LineEdit" parent="Label yeah"]
margin_right = 130.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "0:32.125"
expand_to_text_length = true

[node name="Song Length Label" type="Label" parent="Label yeah"]
margin_left = 134.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "/1:03.431"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Player Button/Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="Player Head/HSlider" to="." method="_on_HSlider_gui_input"]
[connection signal="text_entered" from="Label yeah/Song Time Box" to="." method="_on_Song_Time_Box_text_entered"]
